--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "jarett-engdahl-sdk",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "swagger client sdk for lotr api",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pub": "npm version patch --force && npm publish"
   },
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "swagger-client": "^3.18.5"
+  }
 }
