--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "jarett-engdahl-sdk",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "swagger client sdk for lotr api",
-  "main": "index.js",
+  "main": "clients/tpyescript/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "pub": "npm version patch --force && npm publish"
+    "pub": "npm version patch --force && npm publish",
+    "build:ts": "npx @openapitools/openapi-generator-cli generate -i lotr-api.yaml -g typescript-fetch -o clients/typescript"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@openapitools/openapi-generator-cli": "^2.5.2",
     "swagger-client": "^3.18.5"
   }
 }
