--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "jarett-engdahl-sdk",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "swagger client sdk for lotr api",
-  "main": "clients/typescript/index.js",
+  "main": "clients/typescript/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "pub": "npm version patch --force && npm publish",
