--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
+  "type": "module",
   "name": "jarett-engdahl-sdk",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "swagger client sdk for lotr api",
   "main": "clients/typescript/index.ts",
   "scripts": {
